--- a/Trab2/10_PHP/css/app.css
+++ b/Trab2/10_PHP/css/app.css
@@ -1,2 +1,4 @@
 .MarginTop{margin-top:10px;}
 .MaxWidth{max-width:1000px;}
+.MainBox{margin: 0 auto 0 auto;}
+.TitlText{font-weight:bold;color:#000;}
