Update CSS e Finalizado ver Cliente

--- a/Trab2/10_PHP/css/sb-admin-2.css
+++ b/Trab2/10_PHP/css/sb-admin-2.css
@@ -72,3 +72,4 @@ table.dataTable thead .sorting:after{content:"\f0dc";float:right;font-family:fon
 .panel-yellow a{color:#f0ad4e}
 .panel-yellow a:hover{color:#df8a13}
 .MarginTop{margin-top:10px}
+.MarginLeft{margin-left:10px}
