--- a/Trab2/10_PHP/resources/template/nav.html
+++ b/Trab2/10_PHP/resources/template/nav.html
@@ -50,7 +50,7 @@
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
-                <li><a href="#"><i class="fa fa-edit fa-fw"></i> Relatórios</a></li>
+                <li><a href="relatorios.php"><i class="fa fa-edit fa-fw"></i> Relatórios</a></li>
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
